# openai-tests

./: README.md  requirements.txt  setup.py
llm/: rag_utils.py  utils.py
llm/crewai_tests/blog_article/: README.md  article.md  pyproject.toml
llm/crewai_tests/blog_article/src/blog_article/: crew.py  main.py
llm/crewai_tests/blog_article/src/blog_article/config/: agents.yaml
llm/crewai_tests/blog_article_ollama/src/blog_article_ollama/: article.md  crew.py  main.py
llm/crewai_tests/blog_article_ollama/src/blog_article_ollama/config/: tasks.yaml
llm/crewai_tests/l3_customer_support/: README.md  pyproject.toml
llm/crewai_tests/l3_customer_support/src/l3_customer_support/: crew.py  main.py
llm/crewai_tests/l3_customer_support/src/l3_customer_support/config/: agents.yaml  tasks.yaml
llm/crewai_tests/l4_tools_customer_outreach/: README.md  pyproject.toml
llm/crewai_tests/l4_tools_customer_outreach/src/l4_tools_customer_outreach/: crew.py  main.py  output.txt
llm/crewai_tests/l4_tools_customer_outreach/src/l4_tools_customer_outreach/config/: agents.yaml  tasks.yaml
llm/crewai_tests/l4_tools_customer_outreach/src/l4_tools_customer_outreach/instructor/: enterprise_solutions_framework.md  small_business_engagement.md  tech_startups_outreach.md
llm/crewai_tests/l4_tools_customer_outreach/src/l4_tools_customer_outreach/tools/: sentiment_analysis_tool.py
llm/crewai_tests/tasks_event_planning/: README.md  pyproject.toml
llm/crewai_tests/tasks_event_planning/src/tasks_event_planning/: crew.py  main.py  types.py
llm/crewai_tests/tasks_event_planning/src/tasks_event_planning/config/: agents.yaml  tasks.yaml
llm/crewai_tests/tasks_financial_analysis/: README.md  pyproject.toml
llm/crewai_tests/tasks_financial_analysis/src/tasks_financial_analysis/: crew.py  main.py  report.txt
llm/crewai_tests/tasks_financial_analysis/src/tasks_financial_analysis/config/: agents.yaml  tasks.yaml
llm/data/: audit_checklist.yaml  bbc-news-data-unique.csv
llm/embeddings/: bbc_news_query.py  bbc_news_reader.py
llm/lesson1/: simple_query.py  task_2_1.py
llm/lesson2/: maybe_address.py  pancakes_with_instructor.py  pancakes_with_response_format.py  spam_detector.py  task_1.py
llm/lesson3-rag/: enea_simple_analysis.py  utils.py
llm/lesson3-rag/md/: PGE_Jednostkowe-sprawozdanie-finansowe-PGE-za-rok-2023-plik-pdf-nie-stanowiacy-wersji-oficjalnej.pdf.md  Sprawozdanie finansowe KGHM RR_2023.xhtml.pdf.md  orlen_4_SPRAWOZDANIEFINANSOWEORLEN_2023.xhtml.pdf.md
llm/lesson3_rag/: answer_question_based_on_one_document.py  find_documents.py  rag_assistant.py
llm/lesson4_agents/mcp_test/: client_mcp.py  mcp_servers_links.txt  server_mcp.py
llm/lesson4_agents/pizza/: pizza_manager.py
llm/lesson4_agents/wynajem/: base_agent.py  contract_auditor_agent.py  contract_coordinator_agent.py  contract_generator_agent.py  contract_reviser_agent.py  dane_wynajmu.txt  data_collector_agent.py  multi_agent_execution_log.txt
llm/mcp_ml/: output_model.py  salary_prediction_agent.py  salary_prediction_mcp_server.py
llm/mcp_ml/salary_model/: salary.py
llm/md/: PZU_Sprawozdanie_finansowe_PZU_SA_2023.pdf.md  TAURON-SprFinan-2023-12-31-PL.pdf.md  enea_jednostkowe_sprawozdanie_finansowe_enea_s_a_.pdf.md  pkobp_Jednostkowe_sprawozdanie_finansowe_PKO_Banku_Polskiego_S.A._za_2023_rok_pdefowe.pdf.md
llm/rag_financial_data/: documents.parquet  tables.jsonl  tables_raw.parquet
