[project]
name = "blog_article"
version = "0.1.0"
description = "blog_article using crewAI"
authors = [{ name = "Anna Sidlarewicz", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
blog_article = "blog_article.main:run"
run_crew = "blog_article.main:run"
train = "blog_article.main:train"
replay = "blog_article.main:replay"
test = "blog_article.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
