[project]
name = "l3_customer_support"
version = "0.1.0"
description = "L3_customer_support using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
l3_customer_support = "l3_customer_support.main:run"
run_crew = "l3_customer_support.main:run"
train = "l3_customer_support.main:train"
replay = "l3_customer_support.main:replay"
test = "l3_customer_support.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
