[project]
name = "l4_tools_customer_outreach"
version = "0.1.0"
description = "L4_tools_customer_outreach using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
l4_tools_customer_outreach = "l4_tools_customer_outreach.main:run"
run_crew = "l4_tools_customer_outreach.main:run"
train = "l4_tools_customer_outreach.main:train"
replay = "l4_tools_customer_outreach.main:replay"
test = "l4_tools_customer_outreach.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
