[project]
name = "tasks_event_planning"
version = "0.1.0"
description = "tasks_event_planning using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
tasks_event_planning = "tasks_event_planning.main:run"
run_crew = "tasks_event_planning.main:run"
train = "tasks_event_planning.main:train"
replay = "tasks_event_planning.main:replay"
test = "tasks_event_planning.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
